# rs-chat

./: .gitignore  .sql-formatter.json  ARCHITECTURE.md  Dockerfile  LICENSE.md  README.md  biome.json  docker-compose.yml
.github/workflows/: release.yml  server.yaml
.zed/: debug.json  settings.json
scripts/: release.sh
server/: .env.example  .gitignore  Bacon.toml  Cargo.toml  Rocket.toml
server/migrations/2025-06-12-171524_create_chat_sessions/: down.sql  up.sql
server/migrations/2025-06-15-031207_add_users/: down.sql  up.sql
server/migrations/2025-06-16-035815_add_api_keys/: down.sql  up.sql
server/migrations/2025-06-17-063104_add_message_meta/: down.sql  up.sql
server/migrations/2025-06-21-031403_full_text_search/: down.sql  up.sql
server/migrations/2025-06-23-023453_update_session_updated_at/: down.sql  up.sql
server/migrations/2025-07-05-223545_add_files/: down.sql  up.sql
server/migrations/2025-07-07-115636_add_proxy_auth/: down.sql  up.sql
server/migrations/2025-07-08-233806_add_google_discord_login/: down.sql  up.sql
server/migrations/2025-07-09-155113_add_avatar/: down.sql
server/migrations/2025-07-09-162652_unique_provider_ids/: down.sql  up.sql
server/migrations/2025-07-10-023754_add_oidc_provider/: down.sql  up.sql
server/migrations/2025-07-10-165227_add_auth_providers/: down.sql  up.sql
server/migrations/2025-07-11-012329_add_app_api_keys/: down.sql  up.sql
server/migrations/2025-07-13-170127_add_tools/: down.sql  up.sql
server/migrations/2025-07-17-223807_add_providers/: down.sql  up.sql
server/migrations/2025-08-08-080101_add_session_meta/: down.sql  up.sql
server/migrations/2025-08-09-160537_remove_unused_secret_field/: down.sql  up.sql
server/migrations/2025-08-16-152113_refactor_tools/: down.sql  up.sql
server/src/: api.rs  auth.rs  cached_stream.rs  config.rs  db.rs  errors.rs  lib.rs  main.rs  provider.rs  provider_models.rs  redis.rs  storage.rs  stream.rs  tools.rs  utils.rs  web.rs
server/src/api/: api_key.rs  auth.rs  chat.rs  info.rs  provider.rs  secret.rs  session.rs  storage.rs  tool.rs
server/src/auth/: api_key.rs  guard.rs  oauth.rs  proxy.rs  session.rs  sso_header.rs
server/src/auth/oauth/: discord.rs  github.rs  google.rs  oidc.rs
server/src/db/: models.rs  schema.rs  services.rs
server/src/db/models/: api_key.rs  chat.rs  provider.rs  secret.rs  tool.rs  user.rs
server/src/db/services/: api_key.rs  app_api_key.rs  chat.rs  provider.rs  secret.rs  storage.rs  tool.rs  user.rs
server/src/provider/: anthropic.rs  llm.rs  lorem.rs  ollama.rs  openai.rs  openrouter.rs  utils.rs
server/src/provider/anthropic/: request.rs  response.rs
server/src/provider/ollama/: request.rs  response.rs
server/src/provider/openai/: request.rs  response.rs
server/src/stream/: llm_writer.rs  reader.rs
server/src/tools/: code_executor.rs  core.rs  external_api.rs  http_request.rs  system.rs  utils.rs  web_search.rs
server/src/tools/code_executor/: docker.rs  dockerfiles.rs
server/src/tools/external_api/: custom_api.rs  web_search.rs
server/src/tools/external_api/web_search/: exa.rs
server/src/tools/system/: code_runner.rs  files.rs  system_info.rs
server/src/tools/system/code_runner/: docker.rs  dockerfiles.rs
server/src/tools/utils/: http_request_builder.rs
server/src/tools/web_search/: brave.rs  exa.rs  google.rs  serpapi.rs
server/src/utils/: create_provider.rs  encryption.rs  full_text_search.rs  generate_title.rs  json_logging.rs  llm_stream.rs  s3_storage.rs  sender_with_logging.rs  stored_stream.rs
web/: .cta.json  index.html  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/public/: manifest.json
web/src/: main.tsx  routeTree.gen.ts  styles.css
web/src/components/: ApiKeysManager.tsx  AppApiKeysManager.tsx  Error.tsx  Header.tsx  LoginForm.tsx  PopoverDrawer.tsx  ProviderManager.tsx  SearchDialog.tsx  SearchForm.tsx  Sidebar.tsx  ToolsManager.tsx  login-form.tsx
web/src/components/chat/: ChatFancyMarkdown.tsx  ChatMessageActions.tsx  ChatMessageInput.tsx  ChatMessageToolCalls.tsx  ChatMessages.tsx  ChatModelSelect.tsx  ChatSettings.tsx  ChatStreamingMessages.tsx  ChatStreamingToolCalls.tsx  ChatToolSelect.tsx  index.ts
web/src/components/logos/: Discord.tsx  GitHub.tsx  Google.tsx  index.tsx
web/src/components/main/: ChatFancyMarkdown.tsx  ChatMessageActions.tsx  ChatMessageInput.tsx  ChatMessages.tsx  ChatModelSelect.tsx
web/src/components/theme/: ThemeToggle.tsx
web/src/components/tools/: CodeRunnerToolForm.tsx  CustomApiToolForm.tsx  SystemInfoToolForm.tsx  WebSearchToolForm.tsx  index.ts
web/src/components/ui/: alert-dialog.tsx  avatar.tsx  breadcrumb.tsx  button.tsx  command.tsx  sidebar.tsx
web/src/hooks/: useChatInputState.tsx  useSmoothStreaming.ts
web/src/lib/: providerInfo.ts  tools.ts  utils.ts
web/src/lib/api/: apiKey.ts  chat.ts  client.ts  provider.ts  providerKey.ts  search.ts  session.ts  tool.ts  types.d.ts  user.ts
web/src/lib/context/: StreamingContext.tsx  chats.ts  index.ts  streamManager.ts  streamManagerData.ts  streamManagerState.ts  tools.ts
web/src/routes/: __root.tsx  index.tsx
web/src/routes/app/: _appLayout.tsx
(+26 files in other folders)
