[package]
name = "chat-rs-api"
version = "0.1.0"
edition = "2021"
publish = false

[profile.ci]
inherits = "dev"
lto = false
codegen-units = 256

[profile.release]
opt-level = 2
lto = true
codegen-units = 1
panic = "abort"
strip = true

[dependencies]
aes-gcm = "0.10.3"
chrono = { version = "0.4.41", features = ["serde"] }
diesel = { version = "2.2.10", features = ["postgres", "chrono", "uuid"] }
diesel-async = { version = "0.5.2", features = ["deadpool", "postgres"] }
diesel-derive-enum = { version = "3.0.0-beta.1", features = ["postgres"] }
diesel_async_migrations = "0.15.0"
dotenvy = "0.15.7"
fred = { version = "10.1.0", default-features = false, features = [
    "i-keys",
    "i-lists",
] }
hex = "0.4.3"
llm = { version = "1.3.1", default-features = false, features = [
    "default-tls",
    "openai",
    "anthropic",
] }
openrouter-rs = "0.4.4"
rand = "0.9.1"
reqwest = { version = "0.12.20", default-features = false }
rocket = { version = "0.5.1", features = ["json", "uuid"] }
rocket_flex_session = { version = "0.1.1", git = "https://github.com/fa-sharp/rocket-flex-session", features = [
    "redis_fred",
    "rocket_okapi",
] }
rocket_oauth2 = "0.5.0"
rocket_okapi = { version = "0.9.0", features = ["rapidoc"] }
schemars = { version = "0.8.22", features = ["chrono", "uuid1"] }
serde = { version = "1.0.219" }
serde_json = "1.0.140"
thiserror = "2.0.12"
tokio = { version = "1.45.1" }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["json", "env-filter"] }
uuid = { version = "1.17.0", features = ["v4", "serde"] }
